fix(lichess): make time for first move text readable

--- a/styles/lichess/catppuccin.user.less
+++ b/styles/lichess/catppuccin.user.less
@@ -422,6 +422,11 @@
         background-image: url("data:image/svg+xml,@{svg}") !important;
       }
 
+      /* Time to make first move */
+      .expiration {
+        color: @base;
+      }
+
       /* File and Rank Coords */
       .orientation-white .files coord:nth-child(2n+1),
       .orientation-white .ranks coord:nth-child(2n),
